move dev html page to /examples and add index page for development and testing pages

--- a/web/examples/sos-app-dev.html
+++ b/web/examples/sos-app-dev.html
@@ -7,7 +7,7 @@
     <title>SOS App TESTING</title>
 
     <link rel="stylesheet" href="http://basmet.nerc-bas.ac.uk/js/sos/jquery/theme/default/jquery-ui.min.css" type="text/css"/>
-    <link rel="stylesheet" href="js/SOS/SOS.Styles.css" type="text/css"/>
+    <link rel="stylesheet" href="../js/SOS/SOS.Styles.css" type="text/css"/>
 	
     <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/proj4js/lib/proj4js-combined.js"></script>
     <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/OpenLayers/OpenLayers.js"></script>
@@ -19,8 +19,8 @@
     <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.axislabels.min.js"></script>
     <script type="text/javascript" src="http://basmet.nerc-bas.ac.uk/js/sos/flot/jquery.flot.navigate.min.js"></script>
 	
-    <script type="text/javascript" src="js/SOS/SOS.js"></script>
-    <script type="text/javascript" src="js/SOS/SOS.Ui.js"></script>
+    <script type="text/javascript" src="../js/SOS/SOS.js"></script>
+    <script type="text/javascript" src="../js/SOS/SOS.Ui.js"></script>
 
     <script type="text/javascript">
 		SOS.Proxy.disable();
@@ -66,7 +66,8 @@
   </head>
   <body>
 	<div id="menu">
-		<h3 id="title">SOS App Test</h3>
+		<h1 id="title">SOS App Development Testing</h1>
+		<p>This testing version uses relative paths to the local SOS.js libraries. You can open it as an HTML page right in your browser. Remote SOS only works with CORS enabled.</p>
         <p>Select a SOS from the dropdown.
 			<select id="sos">
 				<option>Select an SOS endpoint</option>
