--- a/web/examples/sos-info-test.html
+++ b/web/examples/sos-info-test.html
@@ -189,7 +189,6 @@
           sos.getFeatureOfInterest(foiId);
           sos.getTemporalCoverageForFeatureOfInterestId(foiId);
         });
-        jQuery("body").append(b1);
 
         var b2 = jQuery("<div/>", {
           text: "Get Offering Details"
@@ -218,7 +217,6 @@
             off.getLatestObservations();
           }
         });
-        jQuery("body").append(b2);
 
         var b3 = jQuery("<div/>", {
           text: "Describe Sensor"
@@ -246,7 +244,22 @@
              SOS returns */
           sos.describeSensor(procedure);
         });
-        jQuery("body").append(b3);
+
+        var gtsStationsContent = "GTS Stations<br/><p>These data are made available via the World Meteorological Organization's Global Telecommunication System (GTS). They are usually near realtime data, and may not be quality-controlled.</p><p>See <a href=\"https://www.wmo.int/pages/prog/www/TEM/index_en.html\">WMO GTS page</a> for details.</p>";
+
+        var b4 = jQuery("<div/>", {
+          text: "Show Highlighting"
+        }).button();
+        b4.bind("click", {self: this}, function(evt) {
+          // Update the help info box with information about GTS stations
+          infoHelp.highlightContent(gtsStationsContent, {
+            backgroundColor: "#ffef8f",
+            duration: 2000
+          });
+        });
+
+        // Add the demonstration buttons to the page
+        jQuery("body").append("<p/>", b1, b2, "<p/>", b3, b4);
       }
     </script>
 
@@ -268,6 +281,7 @@
       /* Local override of .sos-info-contact-box class */
       .local-info-contact-box {
         position: absolute;
+        top: 330px;
         left: 10px;
       }
 
@@ -275,7 +289,7 @@
       .local-info-abstract-box {
         position: absolute;
         left: 10px;
-        top: 400px;
+        top: 430px;
         width: 400px;
         padding: 5px;
         padding-top: 20px;
@@ -286,7 +300,7 @@
       .local-info-keywords-box {
         position: absolute;
         left: 510px;
-        top: 310px;
+        top: 330px;
         width: 400px;
         padding: 5px;
         padding-top: 20px;
